# edgar-filings-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
diagrams/: architecture.mmd
docker/mongo-init/: init.js
src/edgar_mongo_bigdata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/edgar_pipeline/: __init__.py  cli.py  config.py  db.py  logging_config.py  models.py
src/edgar_pipeline/aggregate/: __init__.py  build_gold.py  load_gold.py  sic_lookup.py
src/edgar_pipeline/clean/: __init__.py  load_clean.py  transform.py  validate.py
src/edgar_pipeline/enrich/: __init__.py  load_profiles.py  sec_company_facts.py  sec_profile.py
src/edgar_pipeline/ingest/: __init__.py  fetch_index.py  load_raw.py  parse_index.py
streamlit_app/: app.py
tests/: test_aggregation.py  test_cleaning.py  test_logging.py  test_models.py  test_models_extra.py
